--- a/HTML1/index.html
+++ b/HTML1/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     <h1>Atividade HTML - Inicio</h1>
-    <p>Esse é o meu primeiro parágrafo feito em html</p>
-    <img src="jogo.png" alt="Imagem que representa um jogo">
+    <div>
+        <p>Esse é o meu primeiro <strong>parágrafo</strong> feito em HTML</p>
+        <hr>
+        <p>Continuo aprendendo HTML, <br>agora conhecendo outas tags! Com <a href="https://portal.uneb.br/" target="_blank">este link</a> você vai para o portal da UNEB. Este código eu mostro o sinal de menor: &lt;</p>
+        <p>O <span style="color: rgb(255, 0, 132);">HTML</span> é a base da web.</p>
+    </div>
+    <a href="https://portal.uneb.br/" target="_blank">Portal da UNEB</a>
+    <hr>
+    <img src="/HTML1/assets/jogo.png" alt="Imagem que representa um jogo">
+    <hr>
+    <img src="https://otempo.scene7.com/is/image/sempreeditora/tecnologia%20e%20games-os-jogos-mais-vendidos-de-todos-os-tempos-e-o-que-os-tornaram-sucessos-1739840818?qlt=90&ts=1739840914511&dpr=off" alt="Imagem que representa um jogo na web">
 </body>
 </html>
